# SwarmSync

./: .gitignore  .gitlab-ci.yml  .stgit-edit.txt.save  Cargo.toml  Makefile  docker-compose.yaml  docker-compose.yml  readme.md  roadmap.md
AdminPanel/: README.md  package-lock.json  package.json
admin-panel/: Cargo.toml
admin-panel/src/views/: auth.rs
admin_shell/: Cargo.toml
admin_shell/src/: background.rs  docker-compose.yaml  dockerfile  lib.rs  main.rs  test.rs
admin_shell/src/grpc/: client.rs  mod.rs  test_grpc.rs
admin_shell/tests/: heartbeat_restart.rs
backups/: backup_20250427_144001.sql  backup_20250427_181000.sql  backup_20250429_083232.sql  backup_20250503_160000.sql  backup_20250513_001802.sql  manual_backup.sql
consumer/: Cargo.toml  consumer_config.json  docker-compose.yaml  dockerfile
consumer/src/: client.rs  commands.rs  main.rs  models.rs  state.rs
consumer/src/views/: connect.rs  menu.rs
core/: Cargo.toml  docker-compose.yaml  dockerfile
core/docs/: DOCS_CONVENTIONS.md
core/migrations/2025-04-15-174923_Admins_Domain/: down.sql  up.sql
core/migrations/2025-04-15-175449_Jobs_Domain/: up.sql
core/migrations/2025-04-15-175554_Workers_Domain/: down.sql  up.sql
core/migrations/2025-04-15-175715_Job_Execution_Domain/: down.sql  up.sql
core/src/: commands.rs  docker-compose.yaml  dockerfile  lib.rs  main.rs  pulse_broadcaster.rs  schema.rs  service_channels.rs  service_handles.rs  shared_resources.rs
core/src/api/: auth.rs  mod.rs  rocket_server.rs
core/src/api/routes/: authorization.rs  job.rs  job_assignment.rs  job_metric.rs  job_result.rs  log.rs  mod.rs  user.rs  worker.rs  worker_status.rs
core/src/cli/: graph_tui.rs  menu.rs  mod.rs  utils.rs
core/src/cli/views/: core_inspect.rs  graph.rs  job_inspect.rs  jobs.rs  logs.rs  mod.rs  users.rs
core/src/core/: service_initializer.rs
core/src/database/: mod.rs
core/src/database/models/: job.rs  log.rs  user.rs  worker.rs
core/src/database/repositories/: job.rs  job_assignment.rs  job_metric.rs  job_result.rs  log.rs  user.rs  worker.rs  worker_status.rs
core/src/db/: db.rs
core/src/enums/: auth.rs  image_format.rs  job.rs  mod.rs  system.rs  workers.rs
core/src/models/: admin.rs  credentials.rs  job.rs  log.rs  mod.rs  user.rs  worker.rs
core/src/modules/: dispatcher.rs  harvester.rs  hibernator.rs  logger.rs  mod.rs  module_handels.rs  reciever.rs  rocket_server.rs  scheduler.rs  task_archive.rs
core/src/repositories/: admin.rs  job.rs  job_assignment.rs  job_metric.rs  job_result.rs  log.rs  mod.rs  user.rs  worker.rs  worker_status.rs
core/src/services/: core_bridge.rs  dispatcher.rs  harvester.rs  hibernator.rs  logger.rs  mod.rs  producer_core.rs  pulse_broadcaster.rs  reciever.rs  scheduler.rs  service_channels.rs  service_initializer.rs  task_archive.rs  tcp_authenticator.rs  transmitted_terminal.rs
core/src/shared/: mod.rs  shared_resources.rs
core/src/shared/enums/: image_format.rs  job.rs  log.rs  output.rs  schedule.rs  system.rs  workers.rs
core/src/utils/: logger.rs
core/tests/: job.rs  job_assignment.rs  job_metric.rs  job_result.rs  log.rs  user.rs  worker.rs  worker_status.rs
core/tests/common/: mod.rs
swarm_core/: Cargo.toml  dockerfile
swarm_core/commanddeck/: Cargo.toml
swarm_core/commanddeck/src/: main.rs  menu.rs
swarm_core/commanddeck/src/views/: core_inspect.rs  job_inspect.rs  jobs.rs  logs.rs  mod.rs  users.rs
swarm_core/common/src/: commands.rs  lib.rs  rocket.rs  utils.rs
swarm_core/common/src/database/models/: job.rs  log.rs  user.rs  worker.rs
swarm_core/common/src/database/repositories/: job.rs  job_assignment.rs  job_metric.rs  job_result.rs  log.rs  mod.rs  user.rs  worker.rs  worker_status.rs
swarm_core/common/src/enums/: image_format.rs  job.rs  log.rs  mod.rs  output.rs  schedule.rs  system.rs  workers.rs
swarm_core/core-api/: Cargo.toml
swarm_core/core-api/src/: main.rs
swarm_core/core-api/src/core/: mod.rs  module_initializer.rs  pulse_broadcaster.rs  service_initializer.rs  shared_resources.rs
swarm_core/core-api/src/modules/: dispatcher.rs  harvester.rs  hibernator.rs  logger.rs  mod.rs  reciever.rs  scheduler.rs  task_archive.rs
swarm_core/core-api/src/rocket_api/: rocket_server.rs
swarm_core/core-api/src/rocket_api/routes/: authorization.rs  job.rs  job_assignment.rs  job_metric.rs  job_result.rs  mod.rs  user.rs  worker.rs  worker_status.rs
swarm_core/core-api/tests/: authorization.rs  job.rs  job_assignment.rs  job_metric.rs  job_result.rs  user.rs  worker.rs  worker_status.rs
swarm_core/core-api/tests/common_test/: mod.rs
swarm_core/migrations/2025-04-15-175554_Workers_Domain/: up.sql
swarm_core/migrations/2025-04-17-140624_logs/: down.sql  up.sql
swarm_core/src/: commands.rs
swarm_core/src/api/: mod.rs
swarm_core/src/api/routes/: job_assignment.rs  job_metric.rs  user.rs
swarm_core/src/cli/: mod.rs  utils.rs
swarm_core/src/cli/views/: core_inspect.rs  jobs.rs
swarm_core/src/core/: mod.rs  module_initializer.rs  pulse_broadcaster.rs  service_initializer.rs
swarm_core/src/database/models/: log.rs  mod.rs
swarm_core/src/database/repositories/: job_result.rs  log.rs  worker_status.rs
swarm_core/src/modules/: dispatcher.rs  harvester.rs  mod.rs  reciever.rs  scheduler.rs  task_archive.rs
swarm_core/src/services/: service_channels.rs
swarm_core/src/shared/enums/: job.rs  workers.rs
swarm_core/src/utils/: logger.rs  mod.rs
swarm_core/tests/: authorization.rs  job.rs  job_metric.rs
swarm_core/tests/common/: mod.rs
swarm_worker/: Cargo.toml  Dockerfile
swarm_worker/swarm-worker/: Cargo.toml  Dockerfile
swarm_worker/swarm-worker-common/: Cargo.toml  worker_config.json
swarm_worker/swarm-worker-common/src/: commands.rs  config.rs  ipc.rs  lib.rs  model.rs  net.rs
swarm_worker/swarm-worker-tui/: Cargo.toml  Dockerfile
swarm_worker/swarm-worker-tui/src/: main.rs  state.rs
swarm_worker/swarm-worker-tui/src/views/: auth.rs  connect.rs  menu.rs  mod.rs
swarm_worker/swarm-worker/src/: main.rs
swarm_worker/swarm-worker/tests/: dummy.rs
(+41 files in other folders)
