[workspace]
members = [
    "admin_shell",
    "core",
    "proto_definitions",
]

# Define the dependencies for the entire workspace here
[workspace.dependencies]
tonic = "0.7"
prost = "0.10"
tonic-build = "0.7"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1.17",  features = ["sync"]}



