[package]
name = "admin-panel"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
dialoguer = "0.11"
once_cell = "1.18"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
