[package]
name = "core"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "core"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1.17",  features = ["sync"]}

futures = "0.3.31"
uuid = { version = "1.16.0", features = ["v4"]}
cron = "0.15.0"
chrono = "0.4"
