[workspace]
members   = ["common", "core-api", "commanddeck"]
resolver  = "2"                  # enables [workspace.dependencies]

# One place to pin versions every crate shares:
[workspace.dependencies]
tokio           = { version = "1",  features = ["full"] }
tokio-stream    = { version = "0.1.17", features = ["sync"] }
cron            = "0.15.0"
futures         = "0.3.31"
lsp_doc_stable  = "0.1.0"
thiserror       = "2.0.12"
serde           = { version = "1.0", features = ["derive"] }
serde_json      = "1.0"
chrono          = { version = "0.4", features = ["serde"] }
anyhow          = "1.0"
uuid            = { version = "1.16.0", features = ["v4"] }
rand            = "0.8"
diesel          = { version = "2.1",  features = ["chrono"] }
diesel-async    = { version = "0.4", features = ["postgres"] }
argon2 = { version = "0.4", default-features = false, features = ["std"] }
