[workspace]
resolver = "2"
members = [
    "swarm-worker-tui",
    "swarm-worker",
    "swarm-worker-common"
]

[workspace.dependencies]
tokio           = { version = "1.0", features = ["macros", "rt-multi-thread"] }
reqwest         = { version = "0.11", features = ["json"] }
anyhow          = { version = "1.0", features = ["backtrace"] }
serde           = { version = "1.0", features = ["derive"] }
serde_json      = "1.0"
chrono          = { version = "0.4", features = ["serde"] }
once_cell       = "1.17"
dialoguer       = "0.10"
lsp_doc_stable  = "0.1.0"
