[package]
name = "swarm-worker"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio          = { workspace = true }
reqwest        = { workspace = true }
anyhow         = { workspace = true }
serde          = { workspace = true }
serde_json     = { workspace = true }
chrono         = { workspace = true }
once_cell      = { workspace = true }
dialoguer      = { workspace = true }
lsp_doc_stable = { workspace = true } 
swarm-worker-common = { path = "../swarm-worker-common" }

clap          = { version = "4.1", features = ["derive"] }
signal-hook = "0.3"
rand = "0.8"
url = "2.5.4"

